apps/gke-gustavo/java/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dp-dso-gke-java
  labels:
    app: java-app
spec:
  selector:
    matchLabels:
      app: java-app
  template:
    metadata:
      labels:
        app: java-app
        app.kubernetes.io/name: java-app
    spec:
      containers:
      - name: java-app
        image: europe-west1-docker.pkg.dev/capable-conduit-348311/app-java/dso.gke.java:latest
