apps/gke-gustavo/java/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-dso-gke-java
  labels:
    app: java-app-production
    name: svc-dso-gke-java
#    app.kubernetes.io/name: dso-gke-java
spec:
  selector:
    app: java-app-production
