apps/gke-gustavo/java/ingress-patch.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-dso-gke-java
  labels:
    app: dso-gke-java-production
    app.kubernetes.io/name: dso-gke-java
